[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/World.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 24, 24, 0, 0, 0, 0, 1344, 24, 0, 0, 0, 0, 1344, 744, 0, 0, 0, 0, 24, 744, 0, 0, 0, 0, 24, 24 )
}

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Walls" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
polygon = PoolVector2Array( 0, 0, -64, -64, 1432, -64, 1432, 832, -64, 832, -64, -64, 0, 0, 0, 768, 1368, 768, 1368, 0 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath"]
position = Vector2( 24, 24 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
